# mandro-control

mandro_control/ethercat_controller/: CMakeLists.txt  package.xml
mandro_control/ethercat_controller/include/ethercat_controller/: controller.hpp
mandro_control/ethercat_controller/src/: controller.cpp
mandro_control/mandro_control/: CMakeLists.txt  package.xml
mandro_control/mandro_control_node/: CMakeLists.txt  package.xml
mandro_control/mandro_control_node/launch/: scara_hardware.launch  server_launch.launch
mandro_control/mandro_control_node/src/: mandro_control_node.cpp
mandro_control/mandro_hw_interface/: CMakeLists.txt  package.xml
mandro_control/mandro_hw_interface/config/: mandro_controllers.yaml
mandro_control/mandro_hw_interface/include/mandro_hw_interface/: mandro_hardware_interface.hpp
mandro_control/mandro_hw_interface/src/: mandro_hardware_interface.cpp
mandro_control/mandro_hw_interface/src/joints/: common_joint.cpp  dummy_joint.cpp  ec_joint.cpp  mimic_joint.cpp
mandro_control/mandro_hw_interface/srv/: estop.srv
mandro_control/mandro_moveit_plugins/: CMakeLists.txt  mandro_moveit_core_plugins.xml  mandro_moveit_plugins.xml  package.xml
mandro_control/mandro_moveit_plugins/src/: gripper_action_controller_plugin.cpp  mandro_controller_manager.cpp
mandro_control/mandro_tests/: CMakeLists.txt  package.xml
mandro_control/mandro_tests/src/: main.cpp
mandro_control/mandro_transmission/: CMakeLists.txt  mandro_transmission_plugins.xml  package.xml
mandro_control/mandro_transmission/include/mandro_transmission/: gripper.hpp  gripper_loader.hpp  lead_screw.hpp  lead_screw_loader.hpp  rack_and_pinion.hpp  rack_and_pinion_loader.hpp
mandro_control/mandro_transmission/src/: c1c2_transmission_loader.cpp  gripper_loader.cpp  lead_screw_loader.cpp  rack_and_pinion_loader.cpp
mandro_control/moons_servo/: CMakeLists.txt  package.xml
mandro_control/moons_servo/include/moons_servo/: client.hpp
mandro_control/moons_servo/src/: client.cpp
mandro_control/moons_servo/srv/: go2pos.srv  home.srv  reset.srv
moons_control/: CMakeLists.txt  README.MD  moons_transmission_plugins.xml  package.xml  parameters.ods
moons_control/config/: moons_controllers.yaml
moons_control/include/moons_control/: c1c2_transmission.hpp  c1c2_transmission_loader.hpp  ecat_controller.hpp  gripper_transmission.hpp  gripper_transmission_loader.hpp  moons_hardware_interface.hpp  servo_client.hpp
moons_control/launch/: client.launch  monitor.launch  scara_hardware.launch  server.launch
moons_control/scripts/: use_server_master.sh
moons_control/src/: ecat_controller.cpp  homing.cpp  main.cpp  moons_hardware_interface.cpp  servo_client.cpp
moons_control/src/joints/: common_joint.cpp  dummy_joint.cpp  ec_joint.cpp  mimic_joint.cpp
moons_control/src/transmissions/: c1c2_transmission_loader.cpp  gripper_transmission_loader.cpp
scara_pkg/scara/: urdf.rviz
scara_pkg/scara/config/: joint_names_scara.yaml
scara_pkg/scara/launch/: display.launch
scara_pkg/scara/meshes/: base_link.STL  camera.STL  effector.STL  link1.STL  link1_collision.STL  link2.STL  link2_collision.STL  link3.STL  link3_collision.STL  link4.STL  link4_collision.STL  link5.STL  link5_collision.STL  link6.STL  link6_collision.STL  passive_link.STL  passive_link2.STL  passive_link2_collision.STL  passive_link3.STL  passive_link3_collision.STL  workspace.STL
scara_pkg/scara/urdf/: joints_pos_and_orient.xacro  joints_positions_limits.xacro  joints_vel_effort_limits.xacro  scara.urdf.xacro  transmission_interface.xacro  transmission_reduction.xacro
scara_pkg/scara_action_server/: CMakeLists.txt  package.xml
scara_pkg/scara_action_server/action/: robot_control.action
scara_pkg/scara_action_server/launch/: actions.launch  server.launch
scara_pkg/scara_action_server/scripts/: action_server.py  mandro_io.py  pose_publisher.py  vacuum_controler.py
scara_pkg/scara_moveit/: CMakeLists.txt  package.xml
scara_pkg/scara_moveit/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  scara.srdf
scara_pkg/scara_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  scara_moveit_controller_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
