<?xml version="1.0"?>
<package format="2">
  <name>moons_control</name>
  <version>0.0.0</version>
  <description>The moons_control package</description>

  <maintainer email="me@yason.ovh">yason</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>soem</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>tinyxml</build_depend>
  <build_depend>rosparam</build_depend>
  <build_depend>rosparam_shortcuts</build_depend>
  <build_depend>joint_trajectory_controller</build_depend>
  <build_depend>joint_state_controller</build_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>diagnostic_updater</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>joint_limits_interface</exec_depend>
  <exec_depend>realtime_tools</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>transmission_interface</exec_depend>
  <exec_depend>tinyxml</exec_depend>
  <exec_depend>soem</exec_depend>
  <exec_depend>industrial_trajectory_filters</exec_depend>
  <exec_depend>trac_ik_kinematics_plugin</exec_depend>
  <exec_depend>rosparam</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_ros_perception</exec_depend>
  <exec_depend>moveit_visual_tools</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>

  <export>
    <transmission_interface plugin="${prefix}/moons_transmission_plugins.xml"/>
  </export>
</package>
