<?xml version="1.0"?>
<package format="2">
  <name>mandro_control</name>
  <version>0.0.0</version>
  <description>The mandro_control metapackage</description>
  <maintainer email="mp@yason.ovh">yason</maintainer>
  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>ethercat_controller</exec_depend>
  <exec_depend>mandro_transmission</exec_depend>
  <exec_depend>moons_servo</exec_depend>
  <exec_depend>mandro_hw_interface</exec_depend>
  <exec_depend>mandro_control_node</exec_depend>
  <exec_depend>mandro_moveit_plugins</exec_depend>
  <exec_depend>mandro_tests</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
