<?xml version="1.0"?>
<package format="2">
  <name>mandro_control_node</name>
  <version>0.0.0</version>
  <description>The mandro_control_node package</description>
  <maintainer email="yason@todo.todo">yason</maintainer>
  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>mandro_hw_interface</build_depend>
  <build_depend>moons_servo</build_depend>
  <build_depend>controller_manager</build_depend>

  <exec_depend>mandro_hw_interface</exec_depend>
  <exec_depend>moons_servo</exec_depend>
  <exec_depend>controller_manager</exec_depend>

  <export>

  </export>
</package>
