<?xml version="1.0"?>
<package format="2">
  <name>mandro_hw_interface</name>
  <version>0.0.0</version>
  <description>The mandro_hw_interface package</description>
  <maintainer email="mp@yason.ovh">yason</maintainer>
  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>moons_servo</build_depend>
  <build_depend>ethercat_controller</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>mandro_transmission</build_depend>
  <build_depend>rosparam_shortcuts</build_depend>
  <build_depend>urdf</build_depend>

  <exec_depend>moons_servo</exec_depend>
  <exec_depend>ethercat_controller</exec_depend>
  <exec_depend>transmission_interface</exec_depend>
  <exec_depend>mandro_transmission</exec_depend>
  <exec_depend>rosparam_shortcuts</exec_depend>
  <exec_depend>urdf</exec_depend>

  <export>

  </export>
</package>
