<?xml version="1.0"?>
<package format="2">
  <name>mandro_transmission</name>
  <version>0.0.0</version>
  <description>The mandro_transmission package</description>
  <maintainer email="mp@yason.ovh">yason</maintainer>
  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>transmission_interface</build_depend>
  
  <exec_depend>transmission_interface</exec_depend>
  
  <export>
    <transmission_interface plugin="${prefix}/mandro_transmission_plugins.xml"/>
  </export>
</package>
