<?xml version="1.0"?>
<package format="2">
  <name>moons_servo</name>
  <version>0.0.0</version>
  <description>The moons_servo package</description>
  <maintainer email="mp@yason.ovh">yason</maintainer>
  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ethercat_controller</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>ethercat_controller</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  
  </export>
</package>
