<?xml version="1.0"?>
<package format="2">
  <name>scara_action_server</name>
  <version>0.0.0</version>
  <description>The scara_action_server package</description>
  <author>TODO</author>
  <maintainer email="TODO@email.com"/>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib_msgs</build_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>
</package>
